# mova-plagin

./: .gitignore  MOVA Contract Plugin Architecture V0  README.md  __init__.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRACT_PACKAGE_FORMAT.md  HOOK_INTEGRATION.md  MVP_ACCEPTANCE.md
examples/minimal_invoice_contract/: classification_results.json  flow.json  manifest.json  runtime_binding_set.json
src/mova_contract_plugin/: __init__.py  errors.py  evidence.py  executor_adapter.py  executor_bridge.py  loader.py  session.py  types.py  validation.py
src/mova_contract_plugin/hooks/: __init__.py  base.py  generic.py  hermes.py  openai.py
tests/fixtures/invalid_duplicate_step_id/: flow.json  manifest.json
tests/fixtures/invalid_empty_flow/: manifest.json
tests/fixtures/invalid_mismatched_execution_mode/: manifest.json  runtime_binding_set.json
tests/fixtures/invalid_missing_binding/: flow.json  manifest.json
tests/fixtures/invalid_missing_classification/: manifest.json
tests/fixtures/minimal_contract_package/: classification_results.json  flow.json  manifest.json  runtime_binding_set.json
tests/integration/: test_full_contract_run.py  test_hermes_plugin_format.py
tests/unit/: test_ai_atomic_guard.py  test_evidence.py  test_executor_adapter.py  test_executor_bridge.py  test_generic_hook.py  test_hermes_hook.py  test_loader.py  test_openai_hook.py  test_session.py  test_tools_session_reset.py
